tests/style/octave_mode/expected_out.txt
=== PLAIN MODE ===
In off/test.m, line 5
|    # This is a comment
|    ^ lex error: unexpected character '#'
In on/test.m, line 3
| function potato()
|          ^^^^^^ style: violates naming scheme for function
In on/test.m, line 4
|   disp foo#bar
|   ^^^^ style: indentation not correct, should be 4 spaces, not 2 [fixed]
In on/test.m, line 4
|   disp foo#bar
|        ^^^ style: end statement with a semicolon [fixed]
In on/test.m, line 4
|   disp foo#bar
|           ^^^^ style: comment body must be separated with whitespace from the starting # [fixed]
In on/test.m, line 4
|   disp foo#bar
|           ^^^^ style: comment must be preceeded by whitespace [fixed]
In on/test.m, line 5
|    # This is a comment
|    ^^^^^^^^^^^^^^^^^^^ style: indentation not correct, should be 4 spaces, not 3 [fixed]
MISS_HIT Style Summary: 2 file(s) analysed, 6 style issue(s), 1 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 6 style issue(s), 1 error(s)
